--- a/README
+++ b/README
@@ -4,8 +4,8 @@ Research poster:
     poster.pdf
 
 Demo videos:
-    http://goo.gl/5G0B3 for a demo that starts from the beginning
-    http://goo.gl/4HB5N for a tour of a finished village
+    http://youtu.be/SOuPBm7g4w0 for a demo that starts from the beginning
+    http://youtu.be/-NODd_ZPdrc for a tour of a finished village
 
 How to configure VillageBuilder in Sirikata:
     Under ogre/scripting:
